objects/LLC_BI__KO_App_Column_Definition__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This field is required. Column definitions for knockout apps.</description>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>Designates the category in which this column will be used.</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Data_Type__c</fullName>
        <description>This field is required. Data Type for the KO App Column.  Used to control the input type displayed for the column data.</description>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Header__c</fullName>
        <description>This field is required. Header text for KO app column.</description>
        <label>Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__KO_App__c</fullName>
        <description>This field is required. Specifies the KO App in which this column will be used.</description>
        <label>KO App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sort_Order__c</fullName>
        <description>This field is required. Index controlling the order in which the column will be displayed in relation to other columns</description>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KO App Column Definition</label>
</CustomObject>